<resources>
  <string name="app_name" translatable="false">Snapu</string>

  <string name="bottom_nav_page_home">home</string>
  <string name="bottom_nav_page_work">work</string>
  <string name="bottom_nav_page_product">product</string>
  <string name="bottom_nav_page_shelf">shelf</string>
  <string name="bottom_nav_page_record">record</string>
  <string name="bottom_nav_page_mine">mine</string>

  <string name="login_name_hint">Full Name</string>
  <string name="login_name_helper_text">Enter your name as shown on your passport</string>
  <string name="login_account_hint">Phone</string>
  <string name="login_account_helper_text">Enter 11-digit phone number</string>
  <string name="login_account_prefix_text" translatable="false">+86</string>
  <string name="login_password_hint">Password</string>
  <string name="login_password_confirm_hint">Confirm Password</string>
  <string name="login_password_helper_text">6–20 letters/numbers</string>
  <string name="login_password_forgot">Forgot Password?</string>
  <string name="login_button_text">Login</string>
  <string name="login_sign_button_text">Sign Up</string>
  <string name="login_confirm_button_text">Confirm</string>

  <string name="product_title">Product Data Collection</string>
  <string name="shelf_title">Shelf Data Collection</string>
  <string name="product_data">Product Data</string>
  <string name="shelf_data">Shelf Data</string>

  <string name="product_ean">Product EAN</string>
  <string name="product_name">Product Name</string>R

  <string name="photo">Photo</string>
  <string name="video">Video</string>

  <string name="action_save">Save</string>
  <string name="action_submit">Submit</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_confirm">Confirm</string>
  <string name="action_next">Next</string>

  <string name="dialog_title_confirm_upload">Confirm upload?</string>
  <string name="dialog_title_confirm_delete">Are you sure you want to delete this item?</string>

  <string name="list_all">All</string>
  <string name="list_upload_pending">Pending Upload</string>
  <string name="list_uploaded">Uploaded</string>
  <string name="list_date">Date</string>

  <string name="permission_camera_title">Camera Access Needed</string>
  <string name="permission_camera_content">For taking photos and videos, only accessed when in use</string>
  <string name="permission_camera_setting_content">You have permanently denied camera access. Please enable it in system settings.</string>
</resources>