<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/page_padding_left">

  <ImageView
    android:id="@+id/photo_iv"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/ean_input"
    app:layout_constraintTop_toTopOf="parent" />

  <com.sofar.mlkit.core.GraphicOverlay
    android:id="@+id/graphic_overlay"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="@+id/photo_iv"
    app:layout_constraintLeft_toLeftOf="@+id/photo_iv"
    app:layout_constraintRight_toRightOf="@+id/photo_iv"
    app:layout_constraintTop_toTopOf="@+id/photo_iv" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/ean_input"
    style="?attr/textInputOutlinedDenseStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:hint="@string/product_ean"
    app:layout_constraintBottom_toTopOf="@+id/name_input"
    app:layout_constraintTop_toBottomOf="@+id/photo_iv">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/ean_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name_input"
    style="?attr/textInputOutlinedDenseStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:hint="@string/product_name"
    app:layout_constraintBottom_toTopOf="@+id/capture_btn"
    app:layout_constraintTop_toBottomOf="@+id/ean_input">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/name_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>


  <Button
    android:id="@+id/capture_btn"
    style="?attr/materialButtonOutlinedStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/login_widget_margin_top"
    android:text="@string/photo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/confirm_btn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/name_input" />

  <Button
    android:id="@+id/confirm_btn"
    style="?attr/materialIconButtonFilledStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/action_next"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/capture_btn"
    app:layout_constraintTop_toTopOf="@+id/capture_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
